fix dark mode for pagination

--- a/app/assets/css/bootstrap-override.css
+++ b/app/assets/css/bootstrap-override.css
@@ -392,7 +392,7 @@ input:checked + .slider:before {
 
 /* Pagination */
 .datatable .footer .paginationControls .pagination {
-  border: 1px solid var(--ui-white);
+  border: 1px solid var(--border-pagination-color);
 }
 
 .pagination li button {
